Usuario comum função

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/styles": "^5.15.19",
+    "@rpldy/upload-button": "^1.8.1",
+    "@rpldy/upload-preview": "^1.8.1",
+    "@rpldy/uploady": "^1.8.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
